# CAN_Dashboard

./: CMakeLists.txt  CarBackView.qml  Chart.qml  Chart.qml.autosave  DongHoRPM.qml  DongHoTocDo.qml  ERROR.qml  Main.qml  MyProgressBar.qml  asserts_resource.qrc  main.cpp  realtime.cpp  serialreader.cpp  serialreader.h
